Fix page scrolling on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
     background-color: #ccc;
     overflow: hidden;
     position: relative;
+    touch-action: none;
 }
 
 .attribution {
